--- a/app/src/main/res/layout/activity_post_screen.xml
+++ b/app/src/main/res/layout/activity_post_screen.xml
@@ -16,6 +16,16 @@
         app:lottie_rawRes="@raw/animation" />
 
     <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animationView3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:rotationY="180"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/animation" />
+
+    <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/animationView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
