--- a/app/src/main/res/layout/activity_post_screen.xml
+++ b/app/src/main/res/layout/activity_post_screen.xml
@@ -21,18 +21,10 @@
         android:layout_height="wrap_content"
         android:rotationY="180"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
         app:lottie_rawRes="@raw/animation" />
-
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/animationView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true"
-        app:lottie_rawRes="@raw/animation3" />
 
     <ImageButton
         android:id="@+id/imageButton"
