--- a/app/src/main/res/layout/office_municipal_budget_office.xml
+++ b/app/src/main/res/layout/office_municipal_budget_office.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".office.MunicipalAdministratorOffice">
+    tools:context=".office.MunicipalBudgetOffice">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="150dp"
-            android:text="MUNICIPAL ADMINISTRATOR OFFICE"
+            android:text="@string/titleMBO"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -53,12 +53,12 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/external_services"
+                    android:id="@+id/internal_services"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="8dp"
-                    android:text="External Services"
+                    android:text="Internal Services"
                     android:textStyle="bold" />
 
                 <TextView
@@ -70,7 +70,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginRight="16dp"
                     android:gravity="center"
-                    android:text="Request of Technical Assistance at the Barangay Level" />
+                    android:text="Request for Certification of Availability of Appropriations to Which Expenditures and Obligations may be Properly Charged" />
 
                 <TextView
                     android:id="@+id/service_2"
@@ -81,7 +81,7 @@
                     android:layout_marginTop="32dp"
                     android:layout_marginRight="16dp"
                     android:gravity="center"
-                    android:text="Request Provision Over Meetings" />
+                    android:text="Issuance of Utilization report General Fund and Special Funds " />
 
             </LinearLayout>
         </ScrollView>
