--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,7 +91,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView13"
+                    android:id="@+id/civilRegistry"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
