--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,7 +99,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView14"
+                    android:id="@+id/mdrrmo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
