--- a/app/src/main/res/layout/office_mdrrmo.xml
+++ b/app/src/main/res/layout/office_mdrrmo.xml
@@ -64,7 +64,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/ex.service_1"
+                    android:id="@+id/ex_service_1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -75,7 +75,7 @@
                     android:text="Request for Incident Report Certification" />
 
                 <TextView
-                    android:id="@+id/internal_external_services"
+                    android:id="@+id/internal.external_services"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -87,7 +87,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/inEx.service_1"
+                    android:id="@+id/inEx_service_1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -98,7 +98,7 @@
                     android:text="Emergency Response Services" />
 
                 <TextView
-                    android:id="@+id/inEx.service_2"
+                    android:id="@+id/inEx_service_2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -109,7 +109,7 @@
                     android:text="Request for DRRM-Relevant Trainings and Seminars" />
 
                 <TextView
-                    android:id="@+id/inEx.service_3"
+                    android:id="@+id/inEx_service_3"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
@@ -120,7 +120,7 @@
                     android:text="Request for DRRM-Related Information Materials" />
 
                 <TextView
-                    android:id="@+id/inEx.service_4"
+                    android:id="@+id/inEx_service_4"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
