--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,7 +107,7 @@
                     android:textAlignment="center" />
 
                 <TextView
-                    android:id="@+id/textView"
+                    android:id="@+id/engineering"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
