add mho, finished till service 9

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -144,7 +144,7 @@
                     android:textColor="#49454F" />
 
                 <TextView
-                    android:id="@+id/textView15"
+                    android:id="@+id/mho"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
