--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -153,7 +153,7 @@
                     android:textColor="#49454F" />
 
                 <TextView
-                    android:id="@+id/textView16"
+                    android:id="@+id/hrmo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
@@ -162,7 +162,7 @@
                     android:textColor="#49454F" />
 
                 <TextView
-                    android:id="@+id/textView17"
+                    android:id="@+id/mmo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
