--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -171,7 +171,7 @@
                     android:textColor="#49454F" />
 
                 <TextView
-                    android:id="@+id/textView18"
+                    android:id="@+id/bac"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
