add waterSystem, finished all waterSystem services

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -189,7 +189,7 @@
                     android:textColor="#49454F" />
 
                 <TextView
-                    android:id="@+id/textView20"
+                    android:id="@+id/waterSystem"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
