--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -216,7 +216,7 @@
                     android:textColor="#49454F" />
 
                 <TextView
-                    android:id="@+id/textView23"
+                    android:id="@+id/lydo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
@@ -225,7 +225,7 @@
                     android:textColor="#49454F" />
 
                 <TextView
-                    android:id="@+id/textView24"
+                    android:id="@+id/tourism"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
