add lydo and tourism, finished all their services

--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -61,6 +61,24 @@
         app:strokeWidth="1dp"
         tools:visibility="visible" />
 
+    <Button
+        android:id="@+id/buttonAbout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/blue_2"
+        android:scaleX=".8"
+        android:scaleY=".8"
+        android:text="About"
+        android:textColor="@color/white"
+        app:icon="@mipmap/about_button"
+        app:iconTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
+        app:layout_constraintStart_toStartOf="@+id/toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
+        app:strokeColor="#474141"
+        app:strokeWidth="1dp"
+        tools:visibility="visible" />
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="80dp"
