--- a/app/src/main/res/layout/tourism_in_ex_service1.xml
+++ b/app/src/main/res/layout/tourism_in_ex_service1.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".services.toursim.tourism_in_ex_service_1">
+    tools:context=".services.tourism.tourism_in_ex_service_1">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
